uncommented height of the chart - has no effect

--- a/deploy/App.html
+++ b/deploy/App.html
@@ -113,7 +113,7 @@ Ext.define('CustomApp', {
                 loadMask: false
             },
             id: 'chart',
-            //height: 800,
+            height: 800,
             chartConfig: {
                 chart:{
 		type: 'scatter',
